--- a/neuroconductor_poster.bib
+++ b/neuroconductor_poster.bib
@@ -29,7 +29,7 @@
 
 
 @Article{antsr,
-    title = {A Reproducible Evaluation of ANTs Similarity Metric Performance in Brain Image Registration},
+    title = {A Reproducible Evaluation of {ANTs} Similarity Metric Performance in Brain Image Registration},
     author = {Avants, B. B. and Tustison, N. J. and Song, G. and Cook, P. A. and Klein, A. and Gee, J. C.},
     journal = {NeuroImage},
     year = {2011},
@@ -201,7 +201,7 @@ year = {2016}
 
 
 @article{kirby,
-  title={Multi-parametric neuroimaging reproducibility: a 3-T resource study},
+  title={Multi-parametric neuroimaging reproducibility: a {3-T} resource study},
   author={Landman, Bennett A and Huang, Alan J and Gifford, Aliya and Vikram, Deepti S and Lim, Issel Anne L and Farrell, Jonathan AD and Bogovic, John A and Hua, Jun and Chen, Min and Jarso, Samson and others},
   journal={Neuroimage},
   volume={54},
@@ -287,7 +287,7 @@ year = {2016}
 }
 
 @inproceedings{camino,
-  title={Camino: open-source diffusion-MRI reconstruction and processing},
+  title={Camino: open-source diffusion-{MRI} reconstruction and processing},
   author={Cook, PA and Bai, Y and Nedjati-Gilani, SKKS and Seunarine, KK and Hall, MG and Parker, GJ and Alexander, DC},
   booktitle={14th scientific meeting of the international society for magnetic resonance in medicine},
   volume={2759},
@@ -393,7 +393,7 @@ from the '{Wellcome}' Trust Centre for 'Neuroimaging'},
   }
 
 @article{hcp,
-  title={The WU-Minn human connectome project: an overview},
+  title={The {WU-Minn} human connectome project: an overview},
   author={Van Essen, David C and Smith, Stephen M and Barch, Deanna M and Behrens, Timothy EJ and Yacoub, Essa and Ugurbil, Kamil and WU-Minn HCP Consortium and others},
   journal={Neuroimage},
   volume={80},
@@ -830,4 +830,27 @@ from the '{Wellcome}' Trust Centre for 'Neuroimaging'},
     year = {2012},
     isbn = {1479126187},
   }
+
+
+
+@article{fonov2011unbiased,
+  title={Unbiased average age-appropriate atlases for pediatric studies},
+  author={Fonov, Vladimir and Evans, Alan C and Botteron, Kelly and Almli, C Robert and McKinstry, Robert C and Collins, D Louis and Brain Development Cooperative Group and others},
+  journal={NeuroImage},
+  volume={54},
+  number={1},
+  pages={313--327},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{fonov2009unbiased,
+  title={Unbiased nonlinear average age-appropriate brain templates from birth to adulthood},
+  author={Fonov, Vladimir S and Evans, Alan C and McKinstry, Robert C and Almli, CR and Collins, DL},
+  journal={NeuroImage},
+  volume={47},
+  pages={S102},
+  year={2009},
+  publisher={Academic Press}
+}
 
