--- a/neuroconductor_poster.tex
+++ b/neuroconductor_poster.tex
@@ -166,7 +166,7 @@ Biostatistics\\[0.3ex]
 %==============================================================================
 
 \begin{minipage}{0.21\linewidth}
-\section{What is Neuroconductor?}
+\section{What is Neuroconductor? \includegraphics[scale=0.2]{figures/neuroconductor_iconwithtype_bbg.png}}
 
 Neuroconductor (\url{https://neuroconductor.org/}) is a a centralized repository of R software dedicated to medical image analysis.
 
@@ -290,8 +290,8 @@ DTI models & rcamino, oro.dti, fslr \\
 \section{Data Packages}
 \begin{table}[h]
 \centering
-\begin{tabular}{m{0.25\linewidth}>{\centering \arraybackslash}m{0.75\linewidth}}
-Package & Description \\ \hline
+\begin{tabular}{>{\centering }m{0.21\linewidth}m{0.79\linewidth}}
+Package & \multicolumn{1}{c}{Description} \\ \hline
 kirby21 & Scan-rescan data for 42 subjects with structural and functional MRI and diffusion data \citep{kirby} \\
 EveTemplate, MNITemplate & Templates for population-level analyses \citep{eve, fonov2011unbiased, fonov2009unbiased}   \\
 malf.templates & Templates \citep{bennett2012miccai} for Multi-Atlas Label Fusion (MALF) and Skull Stripping \\
@@ -381,7 +381,7 @@ The project described and data used were supported by the NIH grants R01EB012547
   \begin{itemize}
     \item if maintainer changes something, not much recourse
   \end{itemize}
-\item Need the content (buy-in from the imaging/R communities)
+\item Need the content (buy-in from the imaging/R/statistical communities)
 \end{itemize}
 
 
