new logo and now centered

--- a/beamerthemesharelatex.sty
+++ b/beamerthemesharelatex.sty
@@ -119,11 +119,13 @@
 {\color{fg} \large{\insertinstitute}\\[1ex]}
         \vskip2cm
       \end{column}
-       \begin{column}{.12\linewidth}
-         \begin{center}
-           \includegraphics[width=1\linewidth]{logo2}\hspace{5cm}\\
+       \begin{column}{.15\linewidth}
+        \begin{center}
+        \hspace{-9cm}
+           \includegraphics[width=1\linewidth]{logo2}\\
+%           \hspace{5cm}\\
 %           \includegraphics[width=.35\linewidth]{logo3} 
-         \end{center}
+        \end{center}
        \end{column}
 %        \vspace{1cm}
     \end{columns}
