--- a/beamerthemesharelatex.sty
+++ b/beamerthemesharelatex.sty
@@ -77,7 +77,7 @@
   \setbeamerfont{block title}{series=\bfseries}
   \setbeamerfont{block alerted title}{series=\bfseries}
   \setbeamerfont{frametitle}{series=\bfseries}
-  \setbeamerfont{frametitle}{size=\Large}
+  \setbeamerfont{frametitle}{size=\Huge}
   \setbeamerfont{caption}{size=\normalsize}
   \setbeamerfont{caption name}{size=\normalsize}
 
@@ -111,7 +111,7 @@
     \vskip2cm
     \centering
     %\usebeamercolor{title in headline}
-{\color{color2} \textbf{\huge{\inserttitle}}\\[1ex]}
+{\color{color2} \textbf{\Huge{\inserttitle}}\\[1ex]}
     \vskip 1.5cm
     %\usebeamercolor{author in headline}
 {\color{fg} \large{\insertauthor}\\[1ex]}
