--- a/neuroconductor_poster.tex
+++ b/neuroconductor_poster.tex
@@ -123,7 +123,7 @@
 \title
 %[Super Conference, 1 - 10 July 2013, New York, USA] % Conference
 { % Poster title
-Neuroconductor: An R Platform for Medical Imaging Analysis
+\fontsize{4cm}{6cm}\selectfont Neuroconductor: An R Platform for Medical Imaging Analysis
 }
  
 
@@ -221,7 +221,7 @@ http://rmarkdown.rstudio.com/images/RMarkdownOutputFormats.png)
 \section{Current Neuroconductor Capabilities}
 \begin{table}[h]
 \centering
-\begin{tabular}{m{0.4\linewidth}>{\centering \arraybackslash}m{0.6\linewidth}}
+\begin{tabular}{m{0.4\linewidth}|>{\centering \arraybackslash}m{0.6\linewidth}}
 Capabilities & Packages \\ \hline
 DICOM Images & oro.dicom, dcm2niir, divest, ANTsR \\
 NIfTI Images & oro.nifti, RNifti, ANTsR \\
@@ -300,11 +300,6 @@ hcp &  Download data from the Human Connectome Project	\citep{hcp}
 \end{table}
 
 
-\section{Sources of Funding}
-{\scriptsize
-The project described and data used were supported by the NIH grants R01EB012547, T32AG000247, R01NS046309, R01NS060910, R01NS085211, R01NS046309, U01NS080824, U01NS080824 and U01NS062851 and R01MH095836.
-}
-
 
 
 % \section{Overview of Neuroconductor Packages}
@@ -343,7 +338,7 @@ The project described and data used were supported by the NIH grants R01EB012547
 \section{Neuroconductor Developer Workflow}
 
 \begin{center}
-\includegraphics[width=0.8\linewidth]{neuroc_workflow.png}
+\includegraphics[width=0.6\linewidth]{neuroc_workflow.png}
 \end{center}
 
 \noindent\rule{\linewidth}{5pt}
@@ -383,6 +378,13 @@ The project described and data used were supported by the NIH grants R01EB012547
   \end{itemize}
 \item Need the content (buy-in from the imaging/R/statistical communities)
 \end{itemize}
+
+
+\section{Sources of Funding}
+{\scriptsize
+The project described and data used were supported by the NIH grants R01EB012547, T32AG000247, R01NS046309, R01NS060910, R01NS085211, R01NS046309, U01NS080824, U01NS080824 and U01NS062851 and R01MH095836.
+}
+
 
 
 \end{minipage}
